		Windows-specific changes to R
		=============================

See the file NEWS for changes that affect all versions of R.


R 2.3.0
=======

There is no longer a separate 'East Asian' version of R.dll.
(msvcp60.dll is no longer used as libmingwex now supplies suitable
functions.)

There is a new function choose.dir() to choose a folder (as used for
'Change dir...' on the File menu in RGui.)

New function shortPathNames() to convert names to DOS-style paths (8+3
names and no spaces).

There is now MBCS support for the line editor in Rterm.exe.
(Contributed by Haruki Koyanagi.)

The import libraries libR.a are libRblas.a are now installed in
R_HOME/lib (rather than R_HOME/src/gnuwin32).

R CMD INSTALL will now clean up after interruption (by ctrl-C, at
least where supported by the shell).

iconv() was not always getting the current charset ("") right,
especially if the locale was set in a running R session.

gzfile() now always ensures that the underlying file is opened in
binary mode (this is only an issue on Windows).  This solves some
problems with reading compressed data files via gzfile().

This version of R expects a complete double-complex BLAS to be
available, and so customized (e.g. ATLAS and ACML) versions of
Rblas.dll needs to be rebuilt.  (The pre-compiled ones available on
CRAN have been updated.)

Since the Goto BLAS is no longer available for Windows, support for it
has been withdrawn.

The ACML optimized BLAS can be used for LAPACK: see the 'R
Installation and Administration Manual'.

winMenuAdd() now has no limits on the number of menus or items, and
names are now limited to 500 (not 50) bytes.

Added workaround to Windows graphics devices (windows(),
win.metafile(), etc.) to allow callers to choose not to restore the
focus to the console.  The interface to this will likely change in a
future release.

The assembler exponentiation code has been updated to that from glibc 2.3.6.
