@@ -8,7 +8,7 @@ R 2.3.0
 =======
 
 There is no longer a separate 'East Asian' version of R.dll.
-(msvcp60.dll is no longer used as libmingwex now supplies suitable
+(Also, msvcp60.dll is no longer used as libmingwex now supplies suitable
 functions.)
 
 There is a new function choose.dir() to choose a folder (as used for
@@ -65,7 +65,6 @@ checked for a writable directory for the R session temporary directory:
 (the last will always succeed).  The changes are that TMPDIR is checked
 first and that the values are checked to be a directory.
 
-
 The import library librproxy.a has been removed since linking directly
 to Rproxy.dll works in current MinGW (and package rcom will be updated
 to do so).
@@ -79,6 +78,10 @@ multi-byte locales.  (This allows the user to select a locale other
 than the one Windows is running in, and with suitable fonts see the
 intended characters.  Menus and dialogs should also work in the
 selected locale.)
+
+Added a few mappings from Window locale names (e.g. "chinese", "chs",
+"cht", "ptb") to language names.  There is still scope for confusion:
+LC_ALL=es is Estonian, and LANGUAGE=es is Spanish.
 
 
 
